feat: added 'birthdate' to claims
