# src/main/java/ru/concordia/cppd_service/api/v1/claims/model/ActClaimRequest.java
@@ -1,16 +1,15 @@
 package ru.concordia.cppd_service.api.v1.claims.model;
 
+import com.fasterxml.jackson.annotation.JsonFormat;
 import io.swagger.v3.oas.annotations.media.Schema;
-import jakarta.validation.constraints.NotBlank;
-import jakarta.validation.constraints.NotNull;
-import jakarta.validation.constraints.Pattern;
-import jakarta.validation.constraints.Size;
+import jakarta.validation.constraints.*;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 import ru.concordia.cppd_service.validation.ValidEnum;
 
+import java.time.LocalDate;
 import java.util.UUID;
 
 @Data
@@ -40,6 +39,13 @@ public class ActClaimRequest {
     @Schema(description = "Candidate middle name")
     @Size(max = 50, message = "Candidate middle name cannot exceed 50 characters")
     private String middle_name;
+
+    @Schema(description = "Candidate birthdate")
+    @NotNull(message = "Candidate birthdate can't be empty")
+    @Size(min = 10, max = 10, message = "Candidate birthdate must be well-formed, e.g: '31.12.1970'")
+    @PastOrPresent(message = "Candidate birthdate must be in the past or present")
+    @JsonFormat(pattern = "dd.MM.yyyy")
+    private LocalDate birthdate;
 
     @Schema(description = "Candidate phone")
     @NotBlank(message = "Candidate phone can't be empty")
