# src/main/java/ru/concordia/cppd_service/api/v1/claims/model/ClaimRecord.java
@@ -33,6 +33,9 @@ public class ClaimRecord {
     @Schema(description = "Candidate middle name")
     private String candidate_middle_name;
 
+    @Schema(description = "Candidate birthdate")
+    private String candidate_birthdate;
+
     @Schema(description = "Candidate phone")
     private String candidate_phone;
 
